# track-alumni-umm

./: .env.example  .gitignore  .vercelignore  JALANKAN_BOT.bat  README.md  alumni_validation.html  docker-compose.yml  netlify.toml  package-lock.json  package.json  pyproject.toml  railway.json  redeploy.txt  requirements.txt  run_dev.bat  server.js  vercel.json
api/: [...catchall].py  index.py
backend/: .env.example  Dockerfile  alembic.ini  fix_login.py  import_alumni.py  requirements.txt  reset_passwords.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/api/: [...catchall].py  index.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: __init__.py  admin.py  alumni.py  auth.py
data/: alumni.json
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: EditAlumniModal.jsx  Layout.jsx  ProtectedRoute.jsx
frontend/src/contexts/: AuthContext.jsx  ToastContext.jsx
frontend/src/lib/: api.js
frontend/src/pages/: AlumniPage.jsx  AuditLogPage.jsx  DashboardPage.jsx  ExportPage.jsx  (+1 more)
public/: daftar.html  form.html  index.html  peta.html  program-studi.html  script.js  statistik.html  style.css
scraper/: alumni_scraper.py  cek_angkatan.py  cek_hasil.py  debug_search.py  isi_data_otomatis.py  isi_kontak.py  lihat_progress.py  progress.json  progress_v2.json  results.jsonl  results_v2.jsonl  scraper_v2.py  test_db.py
