[project]
name = "alumni-tracker"
version = "0.1.0"
description = "Sistem Pelacakan Alumni UMM"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "python-jose[cryptography]",
    "slowapi",
    "python-multipart",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "alembic"
]
